feat: added qr and guard verification